<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/buyer_home"
            android:title="@string/home" />


        <item
            android:id="@+id/my_cart"
            android:title="@string/my_cart" />


        <item
            android:id="@+id/my_orders"
            android:title="@string/my_orders" />


        <item
            android:id="@+id/my_disputes"
            android:title="@string/my_disputes" />

        <item
            android:id="@+id/chat_with_admin"
            android:title="@string/chat_with_admin" />


    </group>

    <item android:title="Account">
        <menu>
            <item
            android:id="@+id/profile"
            android:icon="@drawable/account"
            android:title="@string/profile" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
