<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/book_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bookOwner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/seller_name" />

                    <TextView
                        android:id="@+id/sellerPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/seller_address" />
                    <TextView
                        android:id="@+id/sellerEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/seller_email" />
                    <TextView
                        android:id="@+id/chatLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/chat_with" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardview_shadow_start_color"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/order_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/order_date" />

                    <TextView
                        android:id="@+id/order_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/order_status" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/visitBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button"
                        android:text="View Order Details"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/dipBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button"
                        android:text="Open Dispute"
                        android:textColor="@color/white"
                        android:visibility="gone"/>
                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>


</RelativeLayout>
