<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_color"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="156dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="Sing Up"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Create an account to continue"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="-35dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="15dp">

                <Spinner
                    android:id="@+id/userType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:entries="@array/users"
                    android:paddingLeft="5dp"
                    tools:listitem="@layout/support_simple_spinner_dropdown_item" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nick_name"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/uname"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/nick_name"
                    android:paddingLeft="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/mail"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/email"
                    android:paddingLeft="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_instructions"
                    android:textSize="11dp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/passowrd"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/passowrd"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pass_instructions"
                    android:textSize="11dp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/address"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/address"
                    android:paddingLeft="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <Spinner
                        android:id="@+id/sellerType"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:entries="@array/sellerType"
                        android:paddingLeft="5dp"
                        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

                    <EditText
                        android:id="@+id/country"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="30dp"
                        android:hint="Country"
                        android:paddingLeft="5dp" />

                </LinearLayout>

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="190dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btn"
                    android:text="Sign Up"
                    android:textColor="#fff" />


                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/back_arr" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
