<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dispute_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/evidance"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardview_shadow_start_color"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dispute_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/dispute_date" />

                    <TextView
                        android:id="@+id/dispute_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/dispute_status" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Admin Decision"
                    android:textAlignment="center"
                    android:textSize="14dp"
                    android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_shadow_start_color"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/admin_dec_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/not_solved_yet" />
            </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>


</RelativeLayout>
